refactor(domain/system): CarPostionManager#findAll 반환 타입 변경에 따른 수정